--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@draperez/react-components": "^1.2.3",
     "axios": "^1.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-lazy-load-image-component": "^1.6.0",
+    "react-select": "^5.8.0",
     "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
