--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -20,10 +20,10 @@ jobs:
         run: npm i
       - name: Build NPM
         run: npm run build
-      - name: Archive code coverage results
+      - name: Create page artifact
         uses: actions/upload-artifact@v3
         with:
-          name: react-page
+          name: github-pages
           path: public
       - run: echo "🍏 This job's status is ${{ job.status }}."
   deploy:
