--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -21,9 +21,8 @@ jobs:
       - name: Build NPM
         run: npm run build
       - name: Create page artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-pages-artifact@v2
         with:
-          name: github-pages
           path: dist
       - run: echo "🍏 This job's status is ${{ job.status }}."
   deploy:
