--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-lazy-load-image-component": "^1.6.0",
-    "react-select": "^5.8.0",
-    "usehooks-ts": "^2.9.1"
+    "react-select": "^5.8.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
