--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "@draperez/react-components": "^1.3.0",
     "axios": "^1.6.0",
+    "i18next": "^23.7.6",
+    "i18next-browser-languagedetector": "^7.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.4.1",
     "react-icons": "^4.11.0",
     "react-lazy-load-image-component": "^1.6.0",
     "react-select": "^5.8.0"
