--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "i18next": "^23.7.6",
     "i18next-browser-languagedetector": "^7.2.0",
     "i18next-resources-to-backend": "^1.2.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^19.0.0-rc-107a2f8c3e-20240617",
+    "react-dom": "^19.0.0-rc-107a2f8c3e-20240617",
+    "react-hook-form": "^7.52.0",
     "react-i18next": "^13.4.1",
     "react-icons": "^4.11.0",
     "react-lazy-load-image-component": "^1.6.0",
@@ -27,11 +28,12 @@
     "@types/react-lazy-load-image-component": "^1.6.3",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
-    "@vitejs/plugin-react": "^4.0.3",
+    "@vitejs/plugin-react": "^4.3.1",
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "standard": "^17.1.0",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "vite": "^5.3.1"
   }
 }
