--- a/package.json
+++ b/package.json
@@ -11,29 +11,29 @@
   },
   "dependencies": {
     "@draperez/react-components": "^1.3.0",
-    "i18next": "^23.7.6",
-    "i18next-browser-languagedetector": "^7.2.0",
-    "i18next-resources-to-backend": "^1.2.0",
-    "react": "^19.0.0-rc-107a2f8c3e-20240617",
-    "react-dom": "^19.0.0-rc-107a2f8c3e-20240617",
-    "react-hook-form": "^7.52.0",
-    "react-i18next": "^13.4.1",
-    "react-icons": "^4.11.0",
-    "react-lazy-load-image-component": "^1.6.0",
-    "react-select": "^5.8.0"
+    "i18next": "^24.2.1",
+    "i18next-browser-languagedetector": "^8.0.2",
+    "i18next-resources-to-backend": "^1.2.1",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-hook-form": "^7.54.2",
+    "react-i18next": "^15.4.0",
+    "react-icons": "^5.4.0",
+    "react-lazy-load-image-component": "^1.6.3",
+    "react-select": "^5.9.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
-    "@types/react-lazy-load-image-component": "^1.6.3",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "@vitejs/plugin-react": "^4.3.1",
-    "eslint": "^8.45.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",
-    "standard": "^17.1.0",
-    "typescript": "^5.0.2",
-    "vite": "^5.3.1"
+    "@types/react": "^19.0.3",
+    "@types/react-dom": "^19.0.2",
+    "@types/react-lazy-load-image-component": "^1.6.4",
+    "@typescript-eslint/eslint-plugin": "^8.19.1",
+    "@typescript-eslint/parser": "^8.19.1",
+    "@vitejs/plugin-react": "^4.3.4",
+    "eslint": "^9.17.0",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-react-refresh": "^0.4.16",
+    "standard": "^17.1.2",
+    "typescript": "^5.7.2",
+    "vite": "^6.0.7"
   }
 }
