--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,7 +2,7 @@
     "name": "Node.js & TypeScript",
     // Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
 
-    "image": "mcr.microsoft.com/devcontainers/typescript-node:1-20-bullseye",
+    "image": "mcr.microsoft.com/devcontainers/typescript-node:22-bookworm",
 	"runArgs": ["--sysctl", "net.ipv6.conf.all.disable_ipv6=1"],
 	"customizations": {
 		"vscode": {
@@ -12,7 +12,8 @@
 			"extensions": [
 				"GitHub.copilot",
 				"dsznajder.es7-react-js-snippets",
-				"vscode-icons-team.vscode-icons"
+				"vscode-icons-team.vscode-icons",
+				"GitHub.vscode-github-actions"
 			]
 		}
 	},
