--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
   },
   "dependencies": {
     "@draperez/react-components": "^1.3.0",
+    "@tanstack/react-query": "^5.66.0",
     "i18next": "^24.2.1",
     "i18next-browser-languagedetector": "^8.0.2",
     "i18next-resources-to-backend": "^1.2.1",
+    "lz-string": "^1.5.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-hook-form": "^7.54.2",
     "react-i18next": "^15.4.0",
     "react-icons": "^5.4.0",
     "react-lazy-load-image-component": "^1.6.3",
+    "react-markdown": "^9.0.3",
     "react-select": "^5.9.0"
   },
   "devDependencies": {
