--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@draperez/react-components": "^1.3.0",
+    "@redux-devtools/extension": "^3.3.0",
+    "@reduxjs/toolkit": "^2.5.1",
     "@tanstack/react-query": "^5.66.0",
     "i18next": "^24.2.1",
     "i18next-browser-languagedetector": "^8.0.2",
@@ -23,7 +25,9 @@
     "react-icons": "^5.4.0",
     "react-lazy-load-image-component": "^1.6.3",
     "react-markdown": "^9.0.3",
-    "react-select": "^5.9.0"
+    "react-redux": "^9.2.0",
+    "react-select": "^5.9.0",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@types/react": "^19.0.3",
