--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "@draperez/react-components": "^1.3.0",
     "@redux-devtools/extension": "^3.3.0",
     "@reduxjs/toolkit": "^2.5.1",
+    "@types/jsonpack": "^1.1.6",
     "i18next": "^24.2.1",
     "i18next-browser-languagedetector": "^8.0.2",
     "i18next-resources-to-backend": "^1.2.1",
-    "lz-string": "^1.5.0",
+    "jsonpack": "^1.1.5",
     "moment": "^2.30.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
