--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "i18next-resources-to-backend": "^1.2.1",
     "jsonpack": "^1.1.5",
     "moment": "^2.30.1",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "react-hook-form": "^7.54.2",
     "react-i18next": "^15.4.0",
     "react-icons": "^5.4.0",
@@ -44,9 +44,9 @@
     "@typescript-eslint/parser": "^8.19.1",
     "@vitejs/plugin-react": "^4.3.4",
     "babel-jest": "^29.7.0",
-    "babel-plugin-react-compiler": "^19.0.0-beta-30d8a17-20250209",
+    "babel-plugin-react-compiler": "^1.0.0",
     "eslint": "^9.17.0",
-    "eslint-plugin-react-compiler": "^19.0.0-beta-30d8a17-20250209",
+    "eslint-plugin-react-compiler": "^19.1.0-rc.2",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "jest": "^29.7.0",
