--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "devDependencies": {
     "@babel/core": "^7.26.9",
     "@babel/preset-env": "^7.26.9",
+    "@tailwindcss/vite": "^4.1.17",
     "@types/jest": "^29.5.14",
     "@types/react": "^19.0.3",
     "@types/react-dom": "^19.0.2",
@@ -43,6 +44,7 @@
     "@typescript-eslint/eslint-plugin": "^8.19.1",
     "@typescript-eslint/parser": "^8.19.1",
     "@vitejs/plugin-react": "^4.3.4",
+    "autoprefixer": "^10.4.22",
     "babel-jest": "^29.7.0",
     "babel-plugin-react-compiler": "^1.0.0",
     "eslint": "^9.17.0",
@@ -52,7 +54,9 @@
     "jest": "^29.7.0",
     "jest-fetch-mock": "^3.0.3",
     "jest-localstorage-mock": "^2.4.26",
+    "postcss": "^8.5.6",
     "standard": "^17.1.2",
+    "tailwindcss": "^4.1.17",
     "ts-jest": "^29.2.6",
     "typescript": "^5.7.2",
     "vite": "^6.0.7"
