feat: update Vite to v7.2.4, adjust build output directory, and add Live Server extension to devcontainer

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Create page artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: dist
+          path: marvelcdb-filtering
       - run: echo "🍏 This job's status is ${{ job.status }}."
   deploy:
     needs: build
