--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,7 +13,8 @@
 				"dsznajder.es7-react-js-snippets",
 				"vscode-icons-team.vscode-icons",
 				"GitHub.vscode-github-actions",
-				"Orta.vscode-jest"
+				"Orta.vscode-jest",
+				"ritwickdey.LiveServer"
 			]
 		}
 	},
